traefik/patch_service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
  - name: private-http
    port: 80
    protocol: TCP
  - name: private-https
    port: 443
    protocol: TCP
  - name: public-http
    port: 8000
    protocol: TCP
  - name: public-https
    port: 4443
    protocol: TCP
  type: LoadBalancer
