traefik/ingress_route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - http-private
  routes:
  - match: Host(`traefik.internal.lainecloud.com`)
    kind: Rule
    services:
    - name: traefik-admin
      port: 8080
